# deg

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
deg/: README.md  __init__.py  __main__.py  ing_proc.csv  ing_vikt.csv  ingredienser.py
scripts/: deg
src/: deg
src/sample/: ing_proc.csv  ing_vikt.csv
