[build-system]
requires = [
  "setuptools >= 40.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "deg"
authors = [
    {name = "Magnus Johansson", email = "magjo67@gmail.com"}
]
version = "2.4.8"
requires-python = ">=3.6"
license = {text = "BSD-2-Clause"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pandas",
]

[project.scripts]
deg = "deg:do_deg"
