[metadata]
name = deg
version = 2.0.2
author = Magnus Johansson
author_email = magjo67@gmail.com
description = Program för att skapa degrecept
license = BSD-2-Clause

[options]
package_dir=
  =src
packages=find:
python_requires = >=3.7
install_requires =
  pandas

[options.packages.find]
where=src

