[metadata]
name = deg
version = 2.0.3
author = Magnus Johansson
author_email = magjo67@gmail.com
license = BSD 2-clause
description = Program för att skapa degrecept
url = https://github.com/magjo67/deg.git
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Other Audience
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = deg
install_requires = pandas
include_package_data = True
scripts = scripts/deg
